--- a/index.html
+++ b/index.html
@@ -17,15 +17,13 @@
             justify-content: center;
 
         }
-
         img {
-
             width: 500px;
         }
     </style>
     <script type="text/javascript">
         function redireccionar() {
-            window.location="borrador.html";
+            window.location="titulo.html";
         }
         setTimeout("redireccionar()", 3000);
     </script>
