--- a/nombreUsuario.html
+++ b/nombreUsuario.html
@@ -13,7 +13,7 @@
     <form action="cargar.html">
             <label for="nombre"></label>
             <input id="nombre" name="nombre" type="text">
-            <input id="envio" type="image" >
+            <input id="envio" type="submit" >
     </form>
 </body>
 </html>
