--- a/nombreUsuario.html
+++ b/nombreUsuario.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,7 @@
     <form action="cargar.html">
             <label for="nombre"></label>
             <input id="nombre" name="nombre" type="text">
-            <input id="envio" type="submit" >
+            <input id="envio" type="button">
     </form>
 </body>
 </html>
